syntax = "proto3";

package proto.hello;
option java_package = "com.proto.hello";
option java_multiple_files = true;

message Hello {
  int32 clientID = 1;
}

message HelloRequest {
  Hello hello = 1;
}

message HelloResponse {
  string result = 1;
}

service HelloService {
  rpc Hello(HelloRequest) returns (HelloResponse) {};
}